Add users and messages models and login functionality

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,1 +1,46 @@
-<h1>Welcome to the ChatRoom</h1>
+<div class="ui equal width padded grid">
+  <div class="stretched row">
+    <div class="column">
+      <div class="ui segment">
+        <h2 class="ui header">
+          <i class="coffee icon"></i>
+          <div class="content">
+            Say something!
+            <div class="sub header">Type your message below and hit enter</div>
+          </div>
+        </h2>
+        <div class="ui fluid card">
+          <div class="content">
+            <div class="header">Messages</div>
+          </div>
+          <div class="content chatbox">
+            <div class="ui feed">
+              <%= render @messages %>
+            </div>
+          </div>
+          <div class="extra content">
+            <div class="ui fluid large action input">
+              <input type="text" placeholder="Type your message...">
+              <div class="ui button">Send</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="four wide column">
+    <div class="ui segment">
+      <h2 class="ui header">
+          <i class="users icon"></i>
+          <div class="content">
+            Users online
+            <div class="sub header">Following users are available in this chat</div>
+          </div>
+        </h2>
+      <div class="ui fluid inverted vertical icon menu">
+        <%= render @users %>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
