--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,24 +1,26 @@
 <div class="ui inverted segment">
-  <div class="ui large inverted secondary menu">
-    <div class="ui container">
-      <a class="active item">
-        Home
-      </a>
-      <a class="item">
-        Messages
-      </a>
-      <div class="right menu">
-        <div class="ui dropdown item">
-          Language <i class="dropdown icon"></i>
-          <div class="menu">
-            <a class="item">English</a>
-            <a class="item">Russian</a>
-            <a class="item">Spanish</a>
-          </div>
+  <div class="ui huge secondary inverted pointing menu">
+    <a class="active item">
+      Chatroom
+    </a>
+    <a class="item">
+      Messages
+    </a>
+    <div class="right menu">
+      <div class="ui dropdown item">
+        Account <i class="dropdown icon"></i>
+        <div class="menu">
+          <a class="item">Logout</a>
+          <a class="item">Login</a>
+          <a class="item">Signup</a>
         </div>
-        <div class="item">
-            <div class="ui primary button">Sign Up</div>
-        </div>
+      </div>
+      <div class="item">
+        <% if logged_in? %>
+        <%= link_to "Log out", logout_path, class: "ui primary button", method: :delete %>
+        <% else %>
+        <div class="ui primary button">Sign Up</div>
+        <% end %>
       </div>
     </div>
   </div>
