--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TouhidMessageMe</title>
+    <title>Touhid Message Me app</title>
+    <%= favicon_link_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,8 +13,7 @@
 
   <body>
     <%= render 'layouts/navigation' %>
-    <div class="ui container">
-      <%= yield %>
-    </div>
+    <%= render 'layouts/message' %>
+    <%= yield %>
   </body>
 </html>
