--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,23 +3,15 @@
     <a class="active item">
       Chatroom
     </a>
-    <a class="item">
-      Messages
-    </a>
     <div class="right menu">
-      <div class="ui dropdown item">
-        Account <i class="dropdown icon"></i>
-        <div class="menu">
-          <a class="item">Logout</a>
-          <a class="item">Login</a>
-          <a class="item">Signup</a>
-        </div>
-      </div>
+      <% if logged_in? %>
+      <div class="item"><%= current_user.username %></div>
+      <% end %>
       <div class="item">
         <% if logged_in? %>
         <%= link_to "Log out", logout_path, class: "ui primary button", method: :delete %>
         <% else %>
-        <div class="ui primary button">Sign Up</div>
+        <%= link_to "Sign up", signup_path, class: "ui primary button" %>
         <% end %>
       </div>
     </div>
