--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -20,10 +20,10 @@
             </div>
           </div>
           <div class="extra content">
-          <%= form_with(model: @message, local: true) do |f| %>
+          <%= form_with(model: @message, local: true, html: {class: "ui reply form", role: "form"}) do |f| %>
             <div class="ui fluid large action input">
                 <%= f.text_field :body, placeholder: "Type your message here..." %>
-                <%= f.submit "Send", class: "ui button" %>
+                <%= f.button '<i class="bordered inverted edit icon"></i>'.html_safe %>
             </div>
             <% end %>
           </div>
